Add lint and formatter

--- a/src/pages/places/index.html
+++ b/src/pages/places/index.html
@@ -1,7 +1,6 @@
 <html lang="ru" dir="ltr">
-
-<head>
-    <meta charSet="utf-8" />
+  <head>
+    <meta charset="utf-8" />
     <title>Места где я бывал</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,11 +8,10 @@
     <meta name="keywords" content="Иван Зимин" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-rim-auto-match" content="none" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
-</body>
-
+  </body>
 </html>
